# air-pollution-analysis

./: pyproject.toml
docs/: Air Pollution and Economic Activity Draft Research Proposal.docx
notebooks/: eth_adm0_no2_monthly_2024.csv  extraction_example copy.ipynb  extraction_example.ipynb
src/airpollutionpy/: downloadgcs.py  extraction.py  extraction_improved.py  extraction_old.py
