[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-pollution-analysis"
version = "0.1.0"
description = "Extract data from Sentinel-5P and process it at admin levels globally"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sahiti Sarva", email = "ssarva@worldbank.org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "earthengine-api",
    "geemap",
    "pandas",
    "geopandas",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
docs = [
    "sphinx>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/datapartnership/air-pollution-analysis"
"Bug Tracker" = "https://github.com/datapartnership/air-pollution-analysis/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]